Fix localication files ;.

--- a/Sources/iDonateAlert/Resources/en.lproj/Localizable.strings
+++ b/Sources/iDonateAlert/Resources/en.lproj/Localizable.strings
@@ -1,4 +1,4 @@
 "alert_default_title" = "Make a Difference with Every Donation";
 "change_color_title" = "Every Donation";
 "alert_default_mesaage" = "Our app allows you to make a difference in the lives of those affected by earthquakes that took place on February 6, 2023 and felt its effects in 11 provinces. With just a few taps, you can donate to disaster relief efforts and provide aid to those in need.";
-"default_message_bold" = "February 6, 2023"
+"default_message_bold" = "February 6, 2023";
