--- a/Sources/iDonateAlert/Resources/tr.lproj/Localizable.strings
+++ b/Sources/iDonateAlert/Resources/tr.lproj/Localizable.strings
@@ -2,3 +2,4 @@
 "change_color_title" = "Fark Yaratın";
 "alert_default_mesaage" = "Uygulamamız, 6 Şubat 2023 tarihinde yaşanan ve 11 ilde etkisini hissettiren depremden  etkilenenlerin hayatlarında bir fark yaratmanızı diliyor. Sadece birkaç dokunuşla afet yardımı çabalarına bağışta bulunabilir ve ihtiyacı olanlara yardım sağlayabilirsiniz.";
 "default_message_bold" = "6 Şubat 2023";
+"close" = "Kapat  ";
